--- a/yard/skills/66-java/mp-study/mp-zz/src/main/resources/application.yml
+++ b/yard/skills/66-java/mp-study/mp-zz/src/main/resources/application.yml
@@ -17,3 +17,5 @@ mybatis-plus:
     db-config:
       logic-delete-value: 1 # 默认值1
       logic-not-delete-value: 0 # 默认值0
+  mapper-locations:
+    - classpath:/mapper/**/*.xml
