--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -18,6 +18,7 @@
         <module>mp-wrapper</module>
         <module>mp-tenant</module>
         <module>mp-performance-analysis</module>
+        <module>mp-type-handler</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
