--- a/yard/skills/66-java/mp-study/mp-type-handler/src/main/resources/application.yml
+++ b/yard/skills/66-java/mp-study/mp-type-handler/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
   datasource:
     schema: classpath:db/schema-h2.sql
     data: classpath:db/data-h2.sql
+    #url: jdbc:h2:mem:test
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
     url: jdbc:p6spy:h2:mem:test
     username: root
     password: test
