--- a/yard/skills/66-java/mq-study/kafka-hallo/src/main/resources/application.yml
+++ b/yard/skills/66-java/mq-study/kafka-hallo/src/main/resources/application.yml
@@ -17,7 +17,7 @@ kafka:
         servers: 127.0.0.1:9092
         session:
             timeout: 6000
-        topic: imooc-kafka
+        topic: hallo-kafka-topic
         zookeeper:
             connect: 127.0.0.1:2181
     producer:
