--- a/yard/skills/66-java/mq-study/rabbit-imooc-01/rbmq-imooc-producer/src/main/resources/application.properties
+++ b/yard/skills/66-java/mq-study/rabbit-imooc-01/rbmq-imooc-producer/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jackson.default-property-inclusion=NON_NULL
 
 # RabbitMQ配置
 spring.rabbitmq.addresses=127.0.0.1:5672
-spring.rabbitmq.username=hero
-spring.rabbitmq.password=1949.cn
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.connection-timeout=15000
