--- a/yard/skills/66-java/spring-boot-study/spring-boot-aop-aspect/pom.xml
+++ b/yard/skills/66-java/spring-boot-study/spring-boot-aop-aspect/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
