--- a/yard/skills/66-java/spring-boot-study/pom.xml
+++ b/yard/skills/66-java/spring-boot-study/pom.xml
@@ -9,6 +9,7 @@
         <module>spring-boot-rabbit-mq</module>
         <module>spring-boot-redis</module>
         <module>spring-boot-scheduler</module>
+        <module>spring-boot-shiro</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
