--- a/yard/skills/66-go/grpc-demo/examples/helloworld/Makefile
+++ b/yard/skills/66-go/grpc-demo/examples/helloworld/Makefile
@@ -1,3 +1,5 @@
+# Ref: https://grpc.io/docs/quickstart/go/
+
 # ####################################
 # Configure AREA
 # ####################################
